<resources>
    <string name="app_name">Kopi Saya</string>
    <string name="pilih_kopi">Pilih Kopi</string>
    <string name="topping">Topping</string>
    <string name="menu_tambahan">Menu Tambahan</string>
    <string name="expresso">Expresso</string>
    <string name="kopi_luwak">Kopi Luwak</string>
    <string name="cream">Cream</string>
    <string name="sugar">Sugar</string>
    <string name="bubuk_kopi">Bubuk Kopi</string>
    <string name="nasi_goreng">Nasi Goreng</string>
    <string name="mie_goreng">Mie Goreng</string>
    <string name="kopisaya">Kopi Saya</string>
    <string name="bayar">Bayar</string>
</resources>