<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/kopisaya"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="@string/kopisaya" />

    <TextView
        android:background="#1BF403"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pilih_kopi"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="@string/pilih_kopi" />

    <RadioButton
        android:id="@+id/kopirobusta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Kopi Robusta" />

    <RadioButton
        android:id="@+id/expresso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expresso" />

    <RadioButton
        android:id="@+id/kopiluwak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kopi_luwak" />

    <TextView
        android:background="#1BF403"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topping"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Topping" />

    <RadioButton
        android:id="@+id/cream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cream" />

    <RadioButton
        android:id="@+id/sugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sugar" />

    <RadioButton
        android:id="@+id/bubukkopi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bubuk_kopi" />

    <TextView
        android:background="#1BF403"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_tambahan"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:text="Menu Tambahan" />

    <RadioButton
        android:id="@+id/nasigoreng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nasi_goreng" />

    <RadioButton
        android:id="@+id/miegoreng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mie_goreng" />

    <RadioButton
        android:id="@+id/mierebus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mie Rebus" />

    <Button
        android:id="@+id/btnBayar"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:backgroundTint="#1BF403"
        android:onClick="clickbayar"
        android:text="@string/bayar" />

    <TextView
        android:id="@+id/bayaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Total Bayar" />
</LinearLayout>